<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:title="@string/home"
        android:icon="@drawable/round_home"/>

    <item
        android:id="@+id/bottom_category"
        android:title="@string/category"
        android:icon="@drawable/baseline_category_24"
        />
    <!-- Decorative Line android:id="@+id/bottom_Notification" -->

    <item
        android:id="@+id/profile_action_About_US"
        android:title="@string/about_us"
        android:icon="@drawable/ic_ic_aboutus"/>
    <item
        android:id="@+id/bottom_Consult"
        android:title="@string/consult"
        android:icon="@drawable/round_chat"/>
    <item
        android:id="@+id/bottom_Profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24"/>

</menu>