<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">

            <ImageView

                android:id="@+id/item_product_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/cover"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/item_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/text"
            android:maxLines="2"
            android:textSize="14sp"
            android:ellipsize="end"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/item_product_sprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pricing"
                android:fontFamily="sans-serif"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/item_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pricing"
                android:fontFamily="sans-serif"
                android:textColor="@color/text_lite"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:id="@+id/item_product_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off_value"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="@color/green"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
