<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exampleee.agroapk.activity.DetailsActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_above="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/thumbnailSlider"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="false"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="1.5dp"
                    app:sliderIndicatorSelectedColor="@color/colourAccent"
                    app:sliderIndicatorUnselectedColor="#D1D1D1"
                    app:sliderStartAutoCycle="true" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Product Description"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/product_sprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pricing"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/text"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pricing"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/text_lite"
                        android:textSize="14sp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        />
                    <TextView
                        android:id="@+id/item_product_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/off_value"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/green"
                        android:textSize="14sp"
                        />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_height="match_parent">


                <WebView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_details"/>
            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:background="@color/white">

                <View
                    android:layout_width="5dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/capsule"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colourAccent"
                    android:text="@string/related_products"/>

            </LinearLayout>





            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_related"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                tools:listitem="@layout/item_product_horizontal"
                />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:elevation="10dp"
        android:gravity="center"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:id="@+id/footer">

        <LinearLayout
            android:id="@+id/btn_call"
            android:layout_width="0dp"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/input_bg"
            android:onClick="onAddTOCartClicked">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_call"
                app:tint="@color/green"/>

            <TextView
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_chat"
            android:layout_width="0dp"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:backgroundTint="@color/colourAccent"
            android:background="@drawable/input_bg"
            android:onClick="onBuyNowClicked"> <!-- Add onClick attribute -->>


            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_chat"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/main_chat"
                android:layout_height="wrap_content"
                android:text="@string/Chat"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>