<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exampleee.agroapk.activity.CartsActivety">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/colourPrimary"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/tool_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/round_arrow_back_24"
            android:layout_centerVertical="true"
            android:padding="10dp"
            app:tint="@color/white" />


        <TextView
            android:id="@+id/tool_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/tool_back"/>




    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerInParent="true"
        android:elevation="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/toolbar"
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_above="@+id/footer"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        tools:listitem="@layout/item_carts" />


    <RelativeLayout

        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EDE7E7"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cart_sprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/pricing"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/pricing"
                    android:textColor="@color/text_lite"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/input_bg"
                android:backgroundTint="@color/colourPrimaryDark"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_cart_checkout"
                    app:tint="@color/white" />



                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/checkout"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>



</RelativeLayout>