<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/item_cart_coverC"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="7dp">

            <ImageView
                android:id="@+id/item_cart_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/cover"
                android:maxHeight="100dp"
                />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/item_cart_coverC"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_cart_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_cart_sprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/pricing"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_cart_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/pricing"
                    android:textColor="@color/text_lite"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/item_cart_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/off_value"
                    android:textColor="@color/green"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_bg"
                android:backgroundTint="#1B000000"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/item_cart_remove"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/white_circle"
                    android:backgroundTint="#11000000"
                    android:padding="5dp"
                    android:src="@drawable/ic_minus"
                    app:tint="#7E8B9C" />


                <TextView
                    android:id="@+id/item_cart_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="00"
                    android:textColor="@color/text_lite"
                    android:textSize="14sp" />


                <ImageView
                    android:id="@+id/item_cart_add"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/white_circle"
                    android:backgroundTint="#11000000"
                    android:src="@drawable/ic_add"
                    app:tint="#7E8B9C"
                    android:padding="5dp"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#B5A8C2CC"/>

</LinearLayout>